@@ -5,19 +5,19 @@ import com.GHTK.Social_Network.application.port.input.post.ImagePostInput;
 import com.GHTK.Social_Network.application.port.input.post.ReactionCommentPostInput;
 import com.GHTK.Social_Network.application.port.output.FriendShipPort;
 import com.GHTK.Social_Network.application.port.output.auth.AuthPort;
-import com.GHTK.Social_Network.application.port.output.post.CommentPostPort;
-import com.GHTK.Social_Network.application.port.output.post.ImagePostPort;
-import com.GHTK.Social_Network.application.port.output.post.PostPort;
-import com.GHTK.Social_Network.application.port.output.post.RedisImageTemplatePort;
+import com.GHTK.Social_Network.application.port.output.post.*;
 import com.GHTK.Social_Network.common.customException.CustomException;
-import com.GHTK.Social_Network.domain.model.Comment;
-import com.GHTK.Social_Network.domain.model.EReactionType;
-import com.GHTK.Social_Network.domain.model.ReactionComment;
-import com.GHTK.Social_Network.domain.model.User;
+import com.GHTK.Social_Network.domain.model.post.EReactionType;
 import com.GHTK.Social_Network.domain.model.post.Post;
+import com.GHTK.Social_Network.domain.model.post.ReactionPost;
+import com.GHTK.Social_Network.domain.model.post.comment.Comment;
+import com.GHTK.Social_Network.domain.model.user.User;
 import com.GHTK.Social_Network.infrastructure.payload.Mapping.CommentMapper;
 import com.GHTK.Social_Network.infrastructure.payload.Mapping.ReactionCommentMapper;
+import com.GHTK.Social_Network.infrastructure.payload.Mapping.UserMapper;
+import com.GHTK.Social_Network.infrastructure.payload.dto.user.UserBasicDto;
 import com.GHTK.Social_Network.infrastructure.payload.requests.post.CommentRequest;
+import com.GHTK.Social_Network.infrastructure.payload.responses.InteractionResponse;
 import com.GHTK.Social_Network.infrastructure.payload.responses.MessageResponse;
 import com.GHTK.Social_Network.infrastructure.payload.responses.post.CommentResponse;
 import com.GHTK.Social_Network.infrastructure.payload.responses.post.ReactionResponse;
@@ -25,7 +25,8 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 
-import java.util.Date;
+import java.time.LocalDate;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Objects;
 import java.util.stream.Collectors;
@@ -39,9 +40,11 @@ public class CommentService implements CommentPostInput, ReactionCommentPostInpu
   private final FriendShipPort friendShipPort;
   private final RedisImageTemplatePort redisImageTemplatePort;
   private final ImagePostPort imagePostPort;
+  private final ReactionPostPort reactionPostPort;
 
   private final CommentMapper commentMapper;
   private final ReactionCommentMapper reactionCommentMapper;
+  private final UserMapper userMapper;
 
   private User getUserAuth() {
     User user = authPort.getUserAuth();
@@ -53,28 +56,30 @@ public class CommentService implements CommentPostInput, ReactionCommentPostInpu
       throw new CustomException("Post not found", HttpStatus.NOT_FOUND);
     }
 
-    if (friendShipPort.isBlock(u.getUserId(), post.getUserId()) || !authPort.getUserById(post.getUserId()).getIsProfilePublic() && !u.getUserId().equals(this.getUserAuth().getUserId())) {
+    if (friendShipPort.isBlock(u.getUserId(), post.getUserId()) || (!authPort.getUserById(post.getUserId()).getIsProfilePublic() && !u.getUserId().equals(this.getUserAuth().getUserId()))) {
       throw new CustomException("You are not allowed to create a comment", HttpStatus.FORBIDDEN);
     }
   }
 
   @Override
-  public CommentResponse createCommentSrc(CommentRequest comment) {
+  public CommentResponse createCommentRoot(CommentRequest comment) {
     Post post = postPort.findPostByPostId(comment.getPostId());
     User user = getUserAuth();
     checkCommentValid(post, user);
 
     String imageCommentUrl = getImageUrlCommentInRedis(comment.getPublicId(), getUserAuth());
     Comment newComment = new Comment(
-            new Date(),
+            LocalDate.now(),
             comment.getContent(),
             user.getUserId(),
-            post.getUserId(),
+            post.getPostId(),
             imageCommentUrl
     );
     Comment saveComment = commentPostPort.saveComment(newComment);
+    postPort.incrementCommentQuantity(post.getPostId());
+    UserBasicDto userBasicDto = userMapper.userToUserBasicDto(user);
 
-    return commentMapper.commentToCommentResponse(saveComment);
+    return commentMapper.commentToCommentResponse(saveComment, userBasicDto);
   }
 
 
@@ -90,7 +95,7 @@ public class CommentService implements CommentPostInput, ReactionCommentPostInpu
 
     String imageComment = getImageUrlCommentInRedis(comment.getPublicId(), this.getUserAuth());
     Comment newComment = new Comment(
-            new Date(),
+            LocalDate.now(),
             comment.getContent(),
             user.getUserId(),
             post.getPostId(),
@@ -98,8 +103,10 @@ public class CommentService implements CommentPostInput, ReactionCommentPostInpu
     );
     commentPostPort.setParentComment(commentIdSrc, newComment);
     newComment = commentPostPort.saveComment(newComment);
+    postPort.incrementCommentQuantity(post.getPostId());
+    UserBasicDto userBasicDto = userMapper.userToUserBasicDto(user);
 
-    return commentMapper.commentToCommentResponse(newComment);
+    return commentMapper.commentToCommentResponse(newComment, userBasicDto);
   }
 
   @Override
@@ -115,16 +122,8 @@ public class CommentService implements CommentPostInput, ReactionCommentPostInpu
             .collect(Collectors.toList());
   }
 
-  @Override
-  public List<CommentResponse> getCommentsParentByPostId(Long postId) {
-    return commentPostPort.findCommentByParentId(postId).stream().map(
-            commentMapper::commentToCommentResponse
-    ).toList();
-  }
-
   private CommentResponse processCommentWithChildren(Comment comment, List<Comment> allComments) {
-    CommentResponse response = commentMapper.commentToCommentResponse(comment);
-    System.out.println(comment.getParentCommentId());
+    CommentResponse response = commentMapper.commentToCommentResponse(comment, userMapper.userToUserBasicDto(getUserAuth()));
     if (comment.getCommentId() == null) {
       throw new CustomException("Comment is not fouled", HttpStatus.NOT_FOUND);
     }
@@ -132,9 +131,8 @@ public class CommentService implements CommentPostInput, ReactionCommentPostInpu
     List<CommentResponse> childResponses = allComments.stream()
             .filter(c -> c.getParentCommentId() != null && c.getParentCommentId().equals(comment.getCommentId()))
             .map(childComment -> processCommentWithChildren(childComment, allComments))
-            .collect(Collectors.toList());
+            .toList();
 
-    response.setChildComments(childResponses);
     return response;
   }
 
@@ -146,13 +144,15 @@ public class CommentService implements CommentPostInput, ReactionCommentPostInpu
     }
     Post post = postPort.findPostByPostId(comment.getPostId());
     checkCommentValid(post, getUserAuth());
-    return commentMapper.commentToCommentResponse(comment);
+    UserBasicDto userBasicDto = userMapper.userToUserBasicDto(getUserAuth());
+
+    return commentMapper.commentToCommentResponse(comment, userBasicDto);
   }
 
   @Override
   public List<CommentResponse> getAllCommentChildById(Long id) {
     return commentPostPort.findCommentByParentId(id).stream().map(
-            commentMapper::commentToCommentResponse
+            comment -> commentMapper.commentToCommentResponse(comment, userMapper.userToUserBasicDto(getUserAuth()))
     ).toList();
   }
 
@@ -164,6 +164,7 @@ public class CommentService implements CommentPostInput, ReactionCommentPostInpu
     }
     try {
       commentPostPort.deleteCommentById(commentId);
+      postPort.decrementCommentQuantity(commentEntity.getPostId(), commentEntity.getRepliesQuantity() + 1);
       return new MessageResponse("Comment deleted successfully");
     } catch (CustomException e) {
       throw new CustomException("Failed to delete comment", HttpStatus.NOT_FOUND);
@@ -181,13 +182,43 @@ public class CommentService implements CommentPostInput, ReactionCommentPostInpu
     if (imageComment != null) {
       updatedComment.setImageUrl(imageComment);
     }
-    if (comment.getImageUrl() == null && comment.getPublicId() == null) {
-      updatedComment.setImageUrl(null);
-    }
+
     updatedComment.setContent(comment.getContent());
+    UserBasicDto userBasicDto = userMapper.userToUserBasicDto(user);
 
     commentPostPort.saveComment(updatedComment);
-    return commentMapper.commentToCommentResponse(updatedComment);
+    return commentMapper.commentToCommentResponse(updatedComment, userBasicDto);
+  }
+
+  @Override
+  public List<InteractionResponse> getCommentsByInteractions() {
+    String role = "COMMENT";
+    User currentUser = authPort.getUserAuth();
+    List<InteractionResponse> interactionResponseList = new ArrayList<>();
+    commentPostPort.findCommentsByInteractions(authPort.getUserAuth().getUserId()).stream().forEach(
+            c -> {
+              String content = "You do not have sufficient permissions to view this content.";
+              String imageUrl = "";
+              if (!friendShipPort.isBlock(c.getUserId(), currentUser.getUserId())) {
+                content = c.getContent();
+                imageUrl = c.getImageUrl();
+              }
+              InteractionResponse interactionResponse = InteractionResponse.builder()
+                      .roleId(c.getCommentId())
+                      .role(role)
+                      .owner(userMapper.userToUserBasicDto(authPort.getUserById(c.getUserId())))
+                      .reactionType(reactionPostPort.findReactionCommentByCommentIdAndUserId(
+                              c.getCommentId(), currentUser.getUserId()
+                      ).getReactionType())
+                      .content(content)
+                      .image(imageUrl)
+                      .createdAt(c.getCreateAt())
+                      .updateAt(null)
+                      .build();
+              interactionResponseList.add(interactionResponse);
+            }
+    );
+    return interactionResponseList;
   }
 
   @Override
@@ -204,18 +235,19 @@ public class CommentService implements CommentPostInput, ReactionCommentPostInpu
       throw new CustomException("Invalid reaction type", HttpStatus.BAD_REQUEST);
     }
 
-    ReactionComment reactionComment = commentPostPort.findByCommentIdAndUserID(commentId, this.getUserAuth().getUserId());
+    ReactionPost reactionComment = commentPostPort.findByCommentIdAndUserID(commentId, this.getUserAuth().getUserId());
     if (reactionComment == null) {
-      ReactionComment newReactionComment = new ReactionComment(
+      ReactionPost newReactionComment = new ReactionPost(
               newReactionType,
               updatedComment.getCommentId(),
               this.getUserAuth().getUserId()
       );
-      return reactionCommentMapper.commentToResponse(commentPostPort.saveReactionComment(newReactionComment));
+      ReactionPost reactionPost = reactionPostPort.saveReaction(newReactionComment);
+      return reactionCommentMapper.commentToResponse(reactionPost);
     }
 
     reactionComment.setReactionType(newReactionType);
-    return reactionCommentMapper.commentToResponse(commentPostPort.saveReactionComment(reactionComment));
+    return reactionCommentMapper.commentToResponse(reactionPostPort.saveReaction(reactionComment));
   }
 
   @Override
